open-append-close
Signed-off-by: Keran Yang <yangkr920208@gmail.com>