@@ -3,6 +3,7 @@ package io.numaproj.numaflow.sessionreducer;
 import akka.actor.ActorRef;
 import akka.actor.ActorSystem;
 import com.google.protobuf.ByteString;
+import com.google.protobuf.Timestamp;
 import io.numaproj.numaflow.sessionreduce.v1.Sessionreduce;
 import io.numaproj.numaflow.sessionreducer.model.Datum;
 import io.numaproj.numaflow.sessionreducer.model.Message;
@@ -12,6 +13,7 @@ import io.numaproj.numaflow.sessionreducer.model.SessionReducerFactory;
 import org.junit.Test;
 
 import java.util.Arrays;
+import java.util.List;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.ExecutionException;
 
@@ -21,6 +23,7 @@ import static org.junit.Assert.fail;
 
 public class SupervisorActorTest {
     @Test
+    // TODO - update test name - fall ALL
     public void given_inputRequestsShareSameKeys_when_supervisorActorBroadcasts_then_onlyOneReducerActorGetsCreatedAndAggregatesAllRequests() throws RuntimeException {
         final ActorSystem actorSystem = ActorSystem.create("test-system-1");
         CompletableFuture<Void> completableFuture = new CompletableFuture<>();
@@ -41,18 +44,46 @@ public class SupervisorActorTest {
                                 shutdownActor,
                                 outputActor));
 
-        for (int i = 1; i <= 10; i++) {
-            ActorRequest reduceRequest = new ActorRequest(
-                    Sessionreduce.SessionReduceRequest
+        List<String> testKeys = List.of("key-1", "key-2");
+        // send an OPEN request followed by 9 APPEND
+        Sessionreduce.SessionReduceRequest openRequest = Sessionreduce.SessionReduceRequest
+                .newBuilder()
+                .setOperation(Sessionreduce.SessionReduceRequest.WindowOperation
+                        .newBuilder()
+                        .setEventValue(Sessionreduce.SessionReduceRequest.WindowOperation.Event.OPEN_VALUE)
+                        .addAllKeyedWindows(List.of(Sessionreduce.KeyedWindow.newBuilder()
+                                .addAllKeys(testKeys)
+                                .setStart(Timestamp
+                                        .newBuilder().setSeconds(6000).build())
+                                .setEnd(Timestamp.newBuilder().setSeconds(7000).build())
+                                .setSlot("test-slot").build()))
+                        .build())
+                .setPayload(Sessionreduce.SessionReduceRequest.Payload.newBuilder()
+                        .addAllKeys(testKeys)
+                        .setValue(ByteString.copyFromUtf8(String.valueOf(1)))
+                        .build())
+                .build();
+        supervisorActor.tell(openRequest, ActorRef.noSender());
+
+        for (int i = 2; i <= 10; i++) {
+            Sessionreduce.SessionReduceRequest appendRequest = Sessionreduce.SessionReduceRequest
+                    .newBuilder()
+                    .setOperation(Sessionreduce.SessionReduceRequest.WindowOperation
                             .newBuilder()
-                            .setPayload(Sessionreduce.SessionReduceRequest.Payload
-                                    .newBuilder()
-                                    // all reduce requests share same set of keys.
-                                    .addAllKeys(Arrays.asList("key-1", "key-2"))
-                                    .setValue(ByteString.copyFromUtf8(String.valueOf(i)))
-                                    .build())
-                            .build());
-            supervisorActor.tell(reduceRequest, ActorRef.noSender());
+                            .setEventValue(Sessionreduce.SessionReduceRequest.WindowOperation.Event.APPEND_VALUE)
+                            .addAllKeyedWindows(List.of(Sessionreduce.KeyedWindow.newBuilder()
+                                    .addAllKeys(testKeys)
+                                    .setStart(Timestamp
+                                            .newBuilder().setSeconds(6000).build())
+                                    .setEnd(Timestamp.newBuilder().setSeconds(7000).build())
+                                    .setSlot("test-slot").build()))
+                            .build())
+                    .setPayload(Sessionreduce.SessionReduceRequest.Payload.newBuilder()
+                            .addAllKeys(testKeys)
+                            .setValue(ByteString.copyFromUtf8(String.valueOf(i)))
+                            .build())
+                    .build();
+            supervisorActor.tell(appendRequest, ActorRef.noSender());
         }
         supervisorActor.tell(
                 Constants.EOF,
@@ -96,19 +127,25 @@ public class SupervisorActorTest {
                                 shutdownActor,
                                 outputActor)
                 );
-
         for (int i = 1; i <= 10; i++) {
-            ActorRequest reduceRequest = new ActorRequest(
-                    Sessionreduce.SessionReduceRequest
+            Sessionreduce.SessionReduceRequest appendRequest = Sessionreduce.SessionReduceRequest
+                    .newBuilder()
+                    .setOperation(Sessionreduce.SessionReduceRequest.WindowOperation
                             .newBuilder()
-                            .setPayload(Sessionreduce.SessionReduceRequest.Payload
-                                    .newBuilder()
-                                    // each request contain a unique set of keys.
+                            .setEventValue(Sessionreduce.SessionReduceRequest.WindowOperation.Event.APPEND_VALUE)
+                            .addAllKeyedWindows(List.of(Sessionreduce.KeyedWindow.newBuilder()
                                     .addAllKeys(Arrays.asList("shared-key", "unique-key-" + i))
-                                    .setValue(ByteString.copyFromUtf8(String.valueOf(i)))
-                                    .build())
-                            .build());
-            supervisorActor.tell(reduceRequest, ActorRef.noSender());
+                                    .setStart(Timestamp
+                                            .newBuilder().setSeconds(6000).build())
+                                    .setEnd(Timestamp.newBuilder().setSeconds(7000).build())
+                                    .setSlot("test-slot").build()))
+                            .build())
+                    .setPayload(Sessionreduce.SessionReduceRequest.Payload.newBuilder()
+                            .addAllKeys(Arrays.asList("shared-key", "unique-key-" + i))
+                            .setValue(ByteString.copyFromUtf8(String.valueOf(1)))
+                            .build())
+                    .build();
+            supervisorActor.tell(appendRequest, ActorRef.noSender());
         }
 
         supervisorActor.tell(
